2003-01-20  Andras Varga

	* contents of obsolete header cstk.h removed

2003-01-19  Andras Varga

	* distrib.h (new): contains function declarations for distributions 
	contributed by Werner Sandmann (TU Bonn): continuous distributions
        gamma_d(), beta(), erlang_k(), chi_square(), student_t(), cauchy(), 
        triang(),lognormal(), weibull(), pareto_shifted(), and discrete
        distributions bernoulli(), binomial(), geometric(), negbinomial(),
        hypergeometric(), poisson()
	
	* random.h (new), distrib.h; utils.h: From util.h, existing 
	distributions (uniform, normal,	exponential, etc) were moved to 
	distrib.h, and random number generator functions were moved to new file
	random.h.

	* distrib.h: bugfix: 2nd arg to normal() is really the stddev, not
	variance. Documentation fixed.

2003-01-14  Andras Varga

	* cwatch.h: added support for 'bool'

	* index.h: cOutVector doc moved from group 'SimSupport' to 'Statistics'

	* cmodule.h: new method waitAndEnqueue() added to cSimpleModule.

	* cmodule.h: putAsideQueue was DEPRECATED. putAsideQueue is currently 
	used implicitly by the methods wait(), receiveOn() and receiveNewOn()
	to insert messages that arrive during the wait period or not on the 
	specified gate. The receive() functions look first on the 
	putAsideQueue and only then at the future events.

	As practice has shown, the purpose of the putAsideQueue was very
	often misunderstood, and its implicit use by wait() and the message
	receiving functions was highly error-prone. On the other hand,
	it is easy to emulate with waitAndEnqueue(), or a loop with receive(). 
	putAsideQueue will be removed at some point in the future. 
	Be prepared: use wait() and receiveOn()	if you do not expect other 
	messages to arrive at the module; use waitAndEnqueue() where you 
	mean it; do not use the receiveNew..() functions as they will be made 
	redundant when putAsideQueue goes away.

2003-01-07  Andras Varga

	* cenvir.h: added ev.flush()
